--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=AppNameExample
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:F/IuS8Y5EWYGFL/p2oKb7wIaSsD+1f/FsOlOT+6nuvM=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,8 +11,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
@@ -24,9 +24,11 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_HOST=localhost
+REDIS_USERNAME=default
+REDIS_PASSWORD=""
 REDIS_PORT=6379
+REDIS_CACHE_DB=localhost
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
@@ -56,3 +58,8 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+ZOHO_SDK_REDIS_PREFIX=
+ZOHO_CRM_VERIFY_TOKEN=
+
+ZOHO_CRM_CLIENT_ID=
